SERVER-27203: Parse new-style WT extension config inputs

GitOrigin-RevId: 672c5fe6edacbf389766e18a74ced184c042b2c8